--- a/todo.txt
+++ b/todo.txt
@@ -7,4 +7,8 @@ DOWNMUSIC:
   + carrito visible
   + eliminar items seleccionados del carrito
   - pasarela de pago
+    + added dialog (form) for confirm the payment and send data to redsys
+    - prepare data to redsys
+    - send data to redsys
+
   - inserts a db
