working on handle the response from Redsys in cinicio.php

--- a/todo.txt
+++ b/todo.txt
@@ -6,9 +6,8 @@ LOGIN:
 DOWNMUSIC:
   + carrito visible
   + eliminar items seleccionados del carrito
-  - pasarela de pago
+  + pasarela de pago
     + added dialog (form) for confirm the payment and send data to redsys
     + prepare data to redsys
     + send data to redsys
-
-  - inserts a db
+  + inserts a db
